--- a/views/docs.html
+++ b/views/docs.html
@@ -9,7 +9,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
