--- a/views/docs.html
+++ b/views/docs.html
@@ -27,7 +27,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="./image/logo.png" alt="">
+                    <img src="image/logo.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -130,7 +130,7 @@
     </section>
 
     <script src="script.js"></script>
-    <script src="./public/js/script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
