--- a/views/downloader.html
+++ b/views/downloader.html
@@ -14,13 +14,13 @@
             <span class="fas fa-bars"></span>
          </div>
          <ul>
-            <li><a href="/api/download/youtube">Youtube</a></li>
-            <li><a href="/api/download/facebook">Facebook</a></li>
-            <li><a href="/api/download/instagram">Instagram</a></li>
-            <li><a href="/api/download/igstory">Ig Story</a></li>
-            <li><a href="/api/download/igreels">Ig Reels</a></li>
-            <li><a href="/api/download/tiktok">Tiktok</a></li>
-            <li><a href="/api/download/twitter">Twitter</a></li>
+            <li><a href="/api/downloader/youtube">Youtube</a></li>
+            <li><a href="/api/downloader/facebook">Facebook</a></li>
+            <li><a href="/api/downloader/instagram">Instagram</a></li>
+            <li><a href="/api/downloader/igstory">Ig Story</a></li>
+            <li><a href="/api/downloader/igreels">Ig Reels</a></li>
+            <li><a href="/api/downloader/tiktok">Tiktok</a></li>
+            <li><a href="/api/downloader/twitter">Twitter</a></li>
          </ul>
       </div>
       <style>
