--- a/views/downloader.html
+++ b/views/downloader.html
@@ -14,13 +14,13 @@
             <span class="fas fa-bars"></span>
          </div>
          <ul>
-            <li><a href="/api/downloader/youtube">Youtube</a></li>
-            <li><a href="/api/downloader/facebook">Facebook</a></li>
-            <li><a href="/api/downloader/instagram">Instagram</a></li>
-            <li><a href="/api/downloader/igstory">Ig Story</a></li>
-            <li><a href="/api/downloader/igreels">Ig Reels</a></li>
-            <li><a href="/api/downloader/tiktok">Tiktok</a></li>
-            <li><a href="/api/downloader/twitter">Twitter</a></li>
+            <li><a href="/api/download/youtube?url=https://youtu.be/FpX_1f9HTQ4">Youtube</a></li>
+            <li><a href="/api/download/facebook?url=ENTER_URL">Facebook</a></li>
+            <li><a href="/api/download/instagram?url=ENTER_URL">Instagram</a></li>
+            <li><a href="/api/download/igstory?url=ENTER_URL">Ig Story</a></li>
+            <li><a href="/api/download/igreels?url=ENTER_URL">Ig Reels</a></li>
+            <li><a href="/api/download/tiktok?url=ENTER_URL">Tiktok</a></li>
+            <li><a href="/api/download/twitter?url=ENTER_URL">Twitter</a></li>
          </ul>
       </div>
       <style>
