--- a/views/docs.html
+++ b/views/docs.html
@@ -27,7 +27,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="logo.png" alt="">
+                    <img src="https://telegra.ph/file/552ee1e1a1959db620c30.jpg" alt="">
                 </span>
 
                 <div class="text logo-text">
