--- a/views/docs.html
+++ b/views/docs.html
@@ -56,42 +56,42 @@
                     </li>
                     
                     <li class="nav-link">
-                        <a href="/downloader">
+                        <a href="/api/downloader">
                             <i class='bx bx-download icon' ></i>
                             <span class="text nav-text">Downloader</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/asupan">
+                        <a href="/api/asupan">
                             <i class='bx bx-video icon'></i>
                             <span class="text nav-text">Asupan</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/cecan">
+                        <a href="/api/cecan">
                             <i class='bx bx-image icon' ></i>
                             <span class="text nav-text">Cecan</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/convert">
+                        <a href="/api/convert">
                             <i class='bx bx-link icon' ></i>
                             <span class="text nav-text">Convert</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="/canvas">
+                        <a href="/api/canvas">
                             <i class='bx bx-images icon' ></i>
                             <span class="text nav-text">Canvas</span>
                         </a>
                     </li>
                     
                     <li class="nav-link">
-                        <a href="/random">
+                        <a href="/api/random">
                             <i class='bx bx-compass icon' ></i>
                             <span class="text nav-text">Random</span>
                         </a>
