--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -49,7 +49,7 @@
                 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="/docs">
+                        <a href="/dashboard">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Dashboard</span>
                         </a>
