--- a/views/login.html
+++ b/views/login.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="title"><span>Login</span></div>
-        <form action="/docs">
+        <form action="/dashboard">
           <div class="row">
             <i class="fas fa-user"></i>
             <input type="text" placeholder="Username or Email" required>
